--- a/ExamFinal.html
+++ b/ExamFinal.html
@@ -3,13 +3,11 @@
 <title> Examination </title>
 </head>
 <body >
-<div id ="quesDiv">
-</div>
 <script src="ExamFinal.js"></script>
 <script type="text/javascript">
 var quesArr =Quiz.loadQuiz();
 Quiz.startQuiz();
-
 </script>
+</body>
 
 </html>
